# pricing_oracle

./: .env.example  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  config.yaml
src/: aggregate.rs  config.rs  forex_aggregate.rs  ham.rs  main.rs  output.rs  types.rs  zome.rs
src/forex/: coinapi.rs  mod.rs  twelve_data.rs
src/sources/: coingecko.rs  coinmarketcap.rs  geckoterminal.rs  mod.rs
